# CinemaOS

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.agent/rules/: ai-orchestration.md  audio-engine.md  cloud-infrastructure.md  data-architecture.md  frontend-engineer.md  genenerative-media.md  general-rules.md  graphics-engine.md  integration-ffi.md  product-designer.md  product-owner.md  references.md  rust-system.md  security-engineer.md
backend/: Cargo.toml  Dockerfile  check_output.txt  env.template
backend/src/: config.rs  main.rs
backend/src/auth/: clerk.rs  mod.rs
backend/src/db/: firestore.rs  mod.rs  storage.rs
backend/src/observability/: logging.rs  mod.rs  tracing.rs
backend/src/providers/: fal.rs  mod.rs  vertex.rs
backend/src/queue/: mod.rs  pubsub.rs  tasks.rs
backend/src/routes/: chat.rs  credits.rs  generate.rs  health.rs  mod.rs  webhooks.rs
comfyui_nodes/: README.md  __init__.py  credit_tracker.py  fal_provider.py  vault_context.py  vault_save.py  vertex_provider.py
docs/adr/: 001-tauri-choice.md  002-surrealdb.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/workflows/: i2v.json  t2i_flux.json
src-tauri/capabilities/: default.json
src-tauri/comfyui_nodes/: __init__.py  cinemaos_cloud.py  cinemaos_native.py  cinemaos_standard.py  cinemaos_vault.py
src-tauri/comfyui_nodes/cinemaos/: __init__.py  nodes.py
src-tauri/src/: errors.rs  lib.rs  main.rs  pagination.rs  tests.rs  utils.rs
src-tauri/src/ai/: actions.rs  agent_executor.rs  assets.rs  comfyui.rs  comfyui_client.rs  context.rs  cost.rs  elevenlabs_client.rs  fal_client.rs  keygen_client.rs  llm_client.rs  local.rs  mod.rs  model_selection.rs  models.rs  providers.rs  router.rs  templates.rs  uv_manager.rs  workflow.rs  workflow_generator.rs
src-tauri/src/ai/agents/: crew.rs  mod.rs  prompts.rs  traits.rs
src-tauri/src/ai/crew/: art_director.rs  camera.rs  casting_director.rs  cinematographer.rs  colorist.rs  editor.rs  main_agent.rs  mod.rs  music_sfx.rs  photography.rs  scriptwriter.rs  showrunner.rs  voice_actors.rs
src-tauri/src/ai/mcp/: client.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/comfyui/: client.rs  installer.rs  mod.rs  models.rs  process.rs
src-tauri/src/comfyui/workflows/: mod.rs  text2img.rs
src-tauri/src/commands/: agents.rs  ai.rs  comfyui.rs  crew.rs  files.rs  installer.rs  mod.rs  settings.rs  tokens.rs  workflow.rs
src-tauri/src/db/: graph.rs  mod.rs
src-tauri/src/errors/: codes.rs
src-tauri/src/graphics/: mod.rs
src-tauri/src/installer/: downloader.rs  gpu_detector.rs  hardware.rs  mod.rs
src-tauri/src/observability/: mod.rs  sentry.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/vault/: api.rs  mod.rs  models.rs  tokens.rs
src-tauri/tests/: agent_integration_test.rs
src/components/: CommandPalette.tsx  PreferencesDialog.tsx  TemplateGallery.tsx
src/components/AgentChat/: AgentChatPanel.css  AgentChatPanel.tsx  index.ts
src/components/ai/: ChatSidebar.tsx
src/components/editor/: AlternativeDialogueDialog.tsx  BeatBoard.tsx  CharacterRenameDialog.tsx  ExportImportPanel.tsx  FindReplaceDialog.tsx  FormatToolbar.tsx  GoToDialog.tsx  IndexCardsView.tsx  KeyboardShortcutsDialog.tsx  NavigatorPanel.tsx  NotesPopover.tsx  RevisionPanel.tsx  SceneAnalysisPanel.tsx  ScriptCompareDialog.tsx  ScriptEditor.tsx  ScriptReports.tsx  ThesaurusDialog.tsx  TitlePageEditor.tsx  VersionHistoryPanel.tsx  WatermarkDialog.tsx  WriterMenuBar.tsx  WritingStatsPanel.tsx  ZoomControls.tsx
src/components/editor/modes/: FocusMode.tsx
src/components/editor/nodes/: ActBreakNode.tsx  DualDialogueNode.tsx  PageBreakNode.tsx  ScriptNodes.ts
src/components/editor/plugins/: AlternativeDialoguePlugin.tsx  AutoSavePlugin.tsx  BookmarksPlugin.tsx  BreakdownPlugin.tsx  CharacterHighlightPlugin.tsx  ContextStatePlugin.tsx  FocusModePlugin.tsx  KeyboardShortcutsPlugin.tsx  LoroPlugin.tsx  MentionsPlugin.tsx  MoresContinuedsPlugin.tsx  RevisionPlugin.tsx  SceneLockPlugin.tsx  SceneNumbersPlugin.tsx  ScriptFormattingPlugin.tsx  ScriptNotesPlugin.tsx  SmartTypePlugin.tsx  SpeakingModePlugin.tsx  SpellCheckPlugin.tsx  TrackChangesPlugin.tsx  TypewriterScrollPlugin.tsx
src/components/preproduction/: PreProductionLayout.tsx  SceneOverridesPanel.tsx  TokenCard.tsx  TokenEditor.tsx
src/components/studio/: InfiniteCanvas.tsx
src/components/ui/: sonner.tsx
src/config/: menus.ts
src/data/: thesaurus.ts
src/hooks/: index.ts  useAgentActions.ts  useAgentChat.ts  useScriptContext.ts  useViewTransition.ts
src/lib/: ContextEngine.ts  clerk.ts  comfyuiBridge.ts  ffmpeg.ts  loroTransport.ts  ocio.ts  otio.ts  pagination.ts  pdfExport.ts  posthog.ts  usd.ts  uvPython.ts  visualBibleExport.ts
src/services/: TrainingService.ts
src/stores/: editorStore.ts
src/types/: agents.ts  audio.ts  ecs.ts  errors.ts  schemas.ts  scriptContext.ts  tokens.ts
src/utils/: fdxFormat.ts  fountainFormat.ts  pdfExport.ts  tauriMock.ts
