[package]
name = "cinema-os-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cinema_os_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
once_cell = "1.21.3"
loro = "1.0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
dotenvy = "0.15"
# New dependencies for Fase 0-1
specta = "2.0.0-rc.21"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3"
sys-info = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
wgpu = { version = "23.0", features = [] }

thiserror = "2.0"
sentry = { version = "0.35", features = ["tracing"] }
textwrap = "0.16"
rand = "0.8"
# ComfyUI Bridge
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
# Installer
dirs = "5"
# Vault API
axum = "0.7"
base64 = "0.22"
