[package]
name = "cinema-os-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cinema_os_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# === CORE FRAMEWORK (Tauri v2.9.x - Dec 2025) ===
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

# === SERIALIZATION ===
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# === DATABASE (SurrealDB 2.4.0 - Graph + Vector support) ===
surrealdb = { version = "2.4.0", features = ["kv-mem", "kv-surrealkv", "kv-rocksdb"] }

# === ASYNC RUNTIME ===
tokio = { version = "1", features = ["full"] }

# === ERROR HANDLING ===
anyhow = "1.0.100"
thiserror = "2.0"
bytes = "1"

# === UTILITIES ===
once_cell = "1.21.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
textwrap = "0.16"
base64 = "0.22"
url = "2.5"
dirs = "5"
dotenvy = "0.15"

# === CRDT (Loro 1.9.0 - Real-time collaboration) ===
loro = "1.9.0"

# === HTTP CLIENT ===
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# === gRPC (Tonic 0.14.2 - bi-directional streaming) ===
tonic = { version = "0.14", features = ["tls-ring", "gzip"] }
prost = "0.13"

# === TYPE GENERATION ===
specta = { version = "2.0.0-rc.4", features = ["derive"] }

tauri-specta = { version = "2.0.0-rc.4", features = ["derive", "typescript"] }

# === OBSERVABILITY ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.35", features = ["tracing"] }

# === SECURITY ===
keyring = "3"

# === SANDBOXING (Wasmtime - Agent isolation) ===
wasmtime = { version = "27", features = ["cranelift", "component-model"] }

# === SYSTEM INFO ===
sys-info = "0.9"

# === GRAPHICS (WGPU 27.0 - MSRV 1.88) ===
wgpu = { version = "27.0", features = [] }

# === WEBSOCKET (ComfyUI Bridge) ===
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# === WEB SERVER (Vault API) ===
axum = "0.7"
sha2 = "0.10.9"


# Release profile optimizations
[profile.release]
# Link-time optimization for smaller, faster binaries
lto = true
# Single codegen unit for maximum optimization
codegen-units = 1
# Abort on panic for smaller binary size
panic = "abort"
# Strip symbols for smaller binary
strip = true
# Optimize for size
opt-level = "z"

# Development profile - faster builds
[profile.dev]
# Split for faster incremental builds
codegen-units = 256
# Faster dev builds with basic optimizations
opt-level = 1

